# FirstOrderSimulator

./: .gitignore  CMakeLists.txt  README.md
includes/: input_waves.hpp  simulate.hpp  tui.hpp
src/: input_waves.cpp  main.cpp  simulate.cpp  tui.cpp
